--- a/index.html
+++ b/index.html
@@ -273,20 +273,19 @@
         .resumen-grid {
             margin-top: 20px;
             display: grid;
-            gap: 15px;
+            gap: 12px;
         }
 
         .resumen-item {
             background: white;
             border-radius: 12px;
-            padding: 20px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.08);
             transition: all 0.3s ease;
             border: 1px solid #e5e7eb;
+            overflow: hidden;
         }
 
-        .resumen-item:hover {
-            transform: translateY(-2px);
+        .resumen-item.expanded {
             box-shadow: 0 4px 12px rgba(37, 99, 235, 0.15);
             border-color: #2563eb;
         }
@@ -295,14 +294,23 @@
             display: flex;
             align-items: center;
             gap: 12px;
-            margin-bottom: 16px;
-            padding-bottom: 12px;
-            border-bottom: 2px solid #f3f4f6;
+            padding: 16px 20px;
+            cursor: pointer;
+            user-select: none;
+            transition: background 0.2s;
+        }
+
+        .resumen-header:hover {
+            background: #f9fafb;
+        }
+
+        .resumen-header:active {
+            background: #f3f4f6;
         }
 
         .resumen-avatar {
-            width: 48px;
-            height: 48px;
+            width: 40px;
+            height: 40px;
             background: linear-gradient(135deg, #2563eb 0%, #3b82f6 100%);
             border-radius: 50%;
             display: flex;
@@ -310,21 +318,47 @@
             justify-content: center;
             color: white;
             font-weight: 700;
-            font-size: 20px;
+            font-size: 16px;
             flex-shrink: 0;
         }
 
         .resumen-nombre {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: 600;
             color: #111827;
             flex-grow: 1;
+        }
+
+        .resumen-expand-icon {
+            width: 24px;
+            height: 24px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #6b7280;
+            transition: transform 0.3s;
+            font-size: 20px;
+        }
+
+        .resumen-item.expanded .resumen-expand-icon {
+            transform: rotate(180deg);
+        }
+
+        .resumen-content {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.3s ease;
+        }
+
+        .resumen-item.expanded .resumen-content {
+            max-height: 300px;
         }
 
         .resumen-stats {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 12px;
+            padding: 0 20px 20px 20px;
         }
 
         .resumen-stat-box {
@@ -373,6 +407,26 @@
 
         .resumen-stat-box.total .resumen-stat-value {
             color: white;
+        }
+
+        .actions-section {
+            margin-bottom: 20px;
+            padding: 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .actions-section h3 {
+            font-size: 16px;
+            color: #6b7280;
+            margin-bottom: 15px;
+            font-weight: 600;
+        }
+
+        .actions-buttons {
+            display: grid;
+            gap: 10px;
         }
 
         @media (max-width: 600px) {
@@ -576,19 +630,24 @@
                 </div>                
             </div>
 
-            <div class="resumen-grid" id="resumenGrid"></div>
-
-            <div class="export-section">
-                <button class="btn btn-success" onclick="exportarExcel()" style="width: 100%; margin-bottom: 10px;">
-                    📥 Exportar a Excel
-                </button>
-                <button class="btn" onclick="moverDiasAlSiguienteMes()" style="width: 100%; margin-bottom: 10px; background: #3b82f6; color: white;">
-                    📅 Mover Días al Siguiente Mes
-                </button>
-                <button class="btn btn-danger" onclick="limpiarMesAnterior()" style="width: 100%; background: #f59e0b;">
-                    🗑️ Limpiar Registros del Mes Anterior
-                </button>
+            <!-- Botones de acciones arriba -->
+            <div class="actions-section">
+                <h3>Acciones</h3>
+                <div class="actions-buttons">
+                    <button class="btn btn-success" onclick="exportarExcel()" style="width: 100%;">
+                        📥 Exportar a Excel
+                    </button>
+                    <button class="btn" onclick="moverDiasAlSiguienteMes()" style="width: 100%; background: #3b82f6; color: white;">
+                        📅 Mover Días al Siguiente Mes
+                    </button>
+                    <button class="btn btn-danger" onclick="limpiarMesAnterior()" style="width: 100%; background: #f59e0b;">
+                        🗑️ Limpiar Registros del Mes Anterior
+                    </button>
+                </div>
             </div>
+
+            <!-- Lista de empleados colapsable -->
+            <div class="resumen-grid" id="resumenGrid"></div>
         </div>
     </div>
 
@@ -954,23 +1013,26 @@
                     .toUpperCase();
 
                 html += `
-                    <div class="resumen-item">
-                        <div class="resumen-header">
+                    <div class="resumen-item" id="resumen-${emp.id}">
+                        <div class="resumen-header" onclick="toggleResumen(${emp.id})">
                             <div class="resumen-avatar">${iniciales}</div>
                             <div class="resumen-nombre">${emp.nombre}</div>
+                            <div class="resumen-expand-icon">▼</div>
                         </div>
-                        <div class="resumen-stats">
-                            <div class="resumen-stat-box dias">
-                                <div class="resumen-stat-label">Días</div>
-                                <div class="resumen-stat-value">${diasNormales}</div>
-                            </div>
-                            <div class="resumen-stat-box extras">
-                                <div class="resumen-stat-label">Extras</div>
-                                <div class="resumen-stat-value">${extras}</div>
-                            </div>
-                            <div class="resumen-stat-box total">
-                                <div class="resumen-stat-label">Total</div>
-                                <div class="resumen-stat-value">${total}</div>
+                        <div class="resumen-content">
+                            <div class="resumen-stats">
+                                <div class="resumen-stat-box dias">
+                                    <div class="resumen-stat-label">Días</div>
+                                    <div class="resumen-stat-value">${diasNormales}</div>
+                                </div>
+                                <div class="resumen-stat-box extras">
+                                    <div class="resumen-stat-label">Extras</div>
+                                    <div class="resumen-stat-value">${extras}</div>
+                                </div>
+                                <div class="resumen-stat-box total">
+                                    <div class="resumen-stat-label">Total</div>
+                                    <div class="resumen-stat-value">${total}</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -979,6 +1041,11 @@
 
             grid.innerHTML = html;
             document.getElementById('totalEmpleados').textContent = empleados.length;
+        }
+
+        function toggleResumen(empId) {
+            const item = document.getElementById(`resumen-${empId}`);
+            item.classList.toggle('expanded');
         }
 
         function exportarExcel() {
