Initialize empleados array with employee data

--- a/index.html
+++ b/index.html
@@ -652,7 +652,181 @@
     </div>
 
     <script>
-        let empleados = [];
+        let empleados = [
+            { id: 1, nombre: "Acosta Sandra" },
+            { id: 2, nombre: "Aguiar Doris" },
+            { id: 3, nombre: "Alegre Raul" },
+            { id: 4, nombre: "Almada Carolina" },
+            { id: 5, nombre: "Almeida Ricardo" },
+            { id: 6, nombre: "Altamirano Ignacio" },
+            { id: 7, nombre: "Altamirano Marcelo" },
+            { id: 8, nombre: "Alvarenga Vivian" },
+            { id: 9, nombre: "Amarilla Marcelino" },
+            { id: 10, nombre: "Arguello Lucio" },
+            { id: 11, nombre: "Armua Ivan" },
+            { id: 12, nombre: "Armua Jose" },
+            { id: 13, nombre: "Armua Ramon Eduardo" },
+            { id: 14, nombre: "Armua Raul" },
+            { id: 15, nombre: "Ayala Betiana" },
+            { id: 16, nombre: "Ayala Maria Ines" },
+            { id: 17, nombre: "Ayala Ramon" },
+            { id: 18, nombre: "Ayala Santiago" },
+            { id: 19, nombre: "Barrios Apolonio" },
+            { id: 20, nombre: "Barrios Bernabe" },
+            { id: 21, nombre: "Barrios Felipe" },
+            { id: 22, nombre: "Benitez Alejandro" },
+            { id: 23, nombre: "Benitez David Hector" },
+            { id: 24, nombre: "Benitez Dip Juan Ramon" },
+            { id: 25, nombre: "Benitez Jose" },
+            { id: 26, nombre: "Benitez Lucia" },
+            { id: 27, nombre: "Benitez Mario" },
+            { id: 28, nombre: "Benitez Miguel" },
+            { id: 29, nombre: "Britez Gisela" },
+            { id: 30, nombre: "Britez Maria Ignacia" },
+            { id: 31, nombre: "Burgos Alicia" },
+            { id: 32, nombre: "Burgos Hilda" },
+            { id: 33, nombre: "Caballero Patricia" },
+            { id: 34, nombre: "Cabral Leonardo" },
+            { id: 35, nombre: "Cabral Maria C" },
+            { id: 36, nombre: "Cabral Olga" },
+            { id: 37, nombre: "Centurion Ramon" },
+            { id: 38, nombre: "Comisario Josefina" },
+            { id: 39, nombre: "Contin Alejandra Soledad" },
+            { id: 40, nombre: "Contin Daniel" },
+            { id: 41, nombre: "Delgado Andres Roberto" },
+            { id: 42, nombre: "Delgado Griselda" },
+            { id: 43, nombre: "Diaz Jorge" },
+            { id: 44, nombre: "Diaz Ruben" },
+            { id: 45, nombre: "Encina Carmen" },
+            { id: 46, nombre: "Encina Jose Osvaldo" },
+            { id: 47, nombre: "Encina Jose Vicente" },
+            { id: 48, nombre: "Encina Mercedes" },
+            { id: 49, nombre: "Enrique Maria Soledad" },
+            { id: 50, nombre: "Enrique Zunilda" },
+            { id: 51, nombre: "Enriquez Aida" },
+            { id: 52, nombre: "Enriquez Javier" },
+            { id: 53, nombre: "Esquivel Cecilia" },
+            { id: 54, nombre: "Esquivel Jorge" },
+            { id: 55, nombre: "Esquivel Lazaro" },
+            { id: 56, nombre: "Esquivel Norberto" },
+            { id: 57, nombre: "Fernandez Adriana" },
+            { id: 58, nombre: "Fernandez Berenice" },
+            { id: 59, nombre: "Fernandez Graciela" },
+            { id: 60, nombre: "Fernandez Ismael" },
+            { id: 61, nombre: "Fernandez Osvaldo" },
+            { id: 62, nombre: "Fernandez Rosana" },
+            { id: 63, nombre: "Fernandez Sandra" },
+            { id: 64, nombre: "Figueroa Denisse" },
+            { id: 65, nombre: "Figueroa Juliana" },
+            { id: 66, nombre: "Flores Miguel Angel" },
+            { id: 67, nombre: "Flores Omar" },
+            { id: 68, nombre: "Franco Leonardo" },
+            { id: 69, nombre: "Frias Gregorio" },
+            { id: 70, nombre: "Galarza Omar" },
+            { id: 71, nombre: "Gauna Ana Rosa" },
+            { id: 72, nombre: "Gauna Andres" },
+            { id: 73, nombre: "Gauna Antonia" },
+            { id: 74, nombre: "Gauna Marisel" },
+            { id: 75, nombre: "Gauna Sabina" },
+            { id: 76, nombre: "Gomez Sandra" },
+            { id: 77, nombre: "Gonzalez Juan" },
+            { id: 78, nombre: "Gonzalez Nelly" },
+            { id: 79, nombre: "Gonzalez Ruben" },
+            { id: 80, nombre: "Gonzalez Saturnino" },
+            { id: 81, nombre: "Hernandez Luis" },
+            { id: 82, nombre: "Hidalgo Jorge" },
+            { id: 83, nombre: "Hidalgo Marcial" },
+            { id: 84, nombre: "Hidalgo Nahuel" },
+            { id: 85, nombre: "Irala Marcos" },
+            { id: 86, nombre: "Lencina Jose" },
+            { id: 87, nombre: "Lotero Ceferina" },
+            { id: 88, nombre: "Maciel Nidia" },
+            { id: 89, nombre: "Maidana Veronica Itati" },
+            { id: 90, nombre: "Martinez Miguel Angel" },
+            { id: 91, nombre: "Martinez Silvestre" },
+            { id: 92, nombre: "Martres Sandra" },
+            { id: 93, nombre: "Miño Mariela" },
+            { id: 94, nombre: "Morales Fabiana" },
+            { id: 95, nombre: "Morel Saul" },
+            { id: 96, nombre: "Mosqueda Hugo" },
+            { id: 97, nombre: "Mosqueda Johana" },
+            { id: 98, nombre: "Mosqueda Jose" },
+            { id: 99, nombre: "Navarro Maria" },
+            { id: 100, nombre: "Navarro Walter" },
+            { id: 101, nombre: "Ndure Elias" },
+            { id: 102, nombre: "Niz Victor Hugo" },
+            { id: 103, nombre: "Ojeda Diego" },
+            { id: 104, nombre: "Ojeda Facundo" },
+            { id: 105, nombre: "Ojeda Leonela" },
+            { id: 106, nombre: "Ojeda Mirtha" },
+            { id: 107, nombre: "Ojeda Sergio" },
+            { id: 108, nombre: "Ortiz Martina" },
+            { id: 109, nombre: "Pai Marcelo" },
+            { id: 110, nombre: "Pais Marta" },
+            { id: 111, nombre: "Palacios Juan Ramon" },
+            { id: 112, nombre: "Panczak Hector" },
+            { id: 113, nombre: "Peralta Marcelo" },
+            { id: 114, nombre: "Peralta Mario" },
+            { id: 115, nombre: "Peralta Rafael" },
+            { id: 116, nombre: "Perez Luis Miguel" },
+            { id: 117, nombre: "Perez Rosa" },
+            { id: 118, nombre: "Perez Walter" },
+            { id: 119, nombre: "Pica Jesus" },
+            { id: 120, nombre: "Portillo Dario" },
+            { id: 121, nombre: "Portillo Raul" },
+            { id: 122, nombre: "Ramirez Florencia" },
+            { id: 123, nombre: "Ramirez Paola" },
+            { id: 124, nombre: "Ramirez Raul Ernesto" },
+            { id: 125, nombre: "Ramirez Teresa" },
+            { id: 126, nombre: "Rigoni Francisco" },
+            { id: 127, nombre: "Rios Anastacia" },
+            { id: 128, nombre: "Rios Domingo Ramon" },
+            { id: 129, nombre: "Rios Noelia" },
+            { id: 130, nombre: "Rita Sanchez" },
+            { id: 131, nombre: "Rivero Ivan" },
+            { id: 132, nombre: "Rodriguez Mariela" },
+            { id: 133, nombre: "Rodriguez Monica Isabel" },
+            { id: 134, nombre: "Rodriguez René" },
+            { id: 135, nombre: "Rojas Carmelo" },
+            { id: 136, nombre: "Romero Eduardo" },
+            { id: 137, nombre: "Romero Gregorio" },
+            { id: 138, nombre: "Romero Lider" },
+            { id: 139, nombre: "Romero Marcela" },
+            { id: 140, nombre: "Romero Maria" },
+            { id: 141, nombre: "Romero Mario Catalino" },
+            { id: 142, nombre: "Romero Porfidio" },
+            { id: 143, nombre: "Romero Ricardo" },
+            { id: 144, nombre: "Romero Rito" },
+            { id: 145, nombre: "Romero Waldino E" },
+            { id: 146, nombre: "Rosales Jorge" },
+            { id: 147, nombre: "Ruiz Diaz Ramon" },
+            { id: 148, nombre: "Sanchez Luis" },
+            { id: 149, nombre: "Sanchez Manuel" },
+            { id: 150, nombre: "Silva Noelia" },
+            { id: 151, nombre: "Sonza Vanira" },
+            { id: 152, nombre: "Sosa Orlando" },
+            { id: 153, nombre: "Sosa Silvia" },
+            { id: 154, nombre: "Torres Ramona" },
+            { id: 155, nombre: "Torres Tomas" },
+            { id: 156, nombre: "Ubeda Jorge" },
+            { id: 157, nombre: "Valenzuela Daniela" },
+            { id: 158, nombre: "Vallejos Alicio" },
+            { id: 159, nombre: "Vallejos Belen" },
+            { id: 160, nombre: "Vallejos Heraldo" },
+            { id: 161, nombre: "Vasquez Ramon" },
+            { id: 162, nombre: "Vega Antonio" },
+            { id: 163, nombre: "Vega Yesica" },
+            { id: 164, nombre: "Vera Justo" },
+            { id: 165, nombre: "Vera Sosa Marlene" },
+            { id: 166, nombre: "Vergara Ester" },
+            { id: 167, nombre: "Villalva Andrea" },
+            { id: 168, nombre: "Yedro Graciela" },
+            { id: 169, nombre: "Yedro Leonardo Antonio" },
+            { id: 170, nombre: "Zalazar Ariel Antonio" },
+            { id: 171, nombre: "Zalazar Gisela" },
+            { id: 172, nombre: "Zalazar Leonardo" },
+            { id: 173, nombre: "Ziegenbein Ramon Eduardo" }
+        ];
         let asistencias = {};
         let quincenaActual = 1;
         let tabActual = 'empleados';
